Add default Berkeley DB build dir to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,6 @@ build_msvc/bitcoin.sln.DotSettings.user
 build_msvc/bitcoin.sln.DotSettings.user
 build_msvc/bitcoin.sln.DotSettings.user
 *.user
+
+#bdb [default] build dir
+/db4
